style(web): fix category chart overflow in  full screen

--- a/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
+++ b/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
@@ -11,13 +11,8 @@
   }
 
   .content {
-    position: relative;
+    height: 100%;
     padding-top: 6px;
     padding-bottom: 6px;
   }
-}
-
-// set to full height after the component is mounted
-.fullHeight {
-  flex: 1;
 }
